2013-07-18  Alex Moiseenko <imdagger@yandex.ru>
	    Per Bothner  <per@bothner.com>

	* sva38026.scm: New test for Savannah bug #38026
	"Mixed variables scope".
	* Makefile.am: Update accordingly.

2013-07-18  Matthieu Vachon  <matthieu.o.vachon@gmail.com>
	    Per Bothner  <per@bothner.com>

	* sva39150.scm: New test for Savannah bug #39150
	"AppendValue procedure compiler InternalError".
	* Makefile.am: Update accordingly.

2013-07-16  Per Bothner  <per@bothner.com>

	* mac-test.scm: Add test for Savannah bug #39501
	"invalid use of unquote-splicing".

2013-07-11  Per Bothner  <per@bothner.com>

	* inlining.expected: Update results.

2013-06-30  Matthieu Vachon  <matthieu.o.vachon@gmail.com>
	    Per Bothner  <per@bothner.com>

	* sva39060.scm: New test for Savannah bug #39060
	"ClassFormatException (Absent Code attribute)".
	* Makefile.ma: Update accordingly.

2013-06-29  Per Bothner  <per@bothner.com>

	* misc.test.scm: Add some tests for non-canonical Booleans.

2013-06-28  John Cowan  <cowan@mercury.ccil.org>
	    Per Bothner  <per@bothner.com>

	* defclass2.scm: New test for non-simple inheritace
	in immediate line-by-line mode.
	* Makefile.am (SCRIPTS_TO_RUN): Update accrdingly.

2013-06-22  Per Bothner  <per@bothner.com>

	* inlining-test.scm (check-even): Add return-type specifier.
	(check-even-unspec-return): New function.
	(eqv1): New function.
	* misc-test.scm: Add test.
	* inlining.expected: Update accordingly.
	* Makefile.am: Likewise.

2013-06-20  Per Bothner  <per@bothner.com>

	* inlining-test.scm (numcomp1, numcomp2, numcomp3, numcomp4, numcomp5):
	New functions, to test non-type-optimized <, <=, etc.
	* inlining.expected: Update accordingly.
	* Makefile.am: Likewise.

2013-06-12  Matthieu Vachon  <matthieu.o.vachon@gmail.com>
    	    Per Bothner  <per@bothner.com>

	* eval1.scm: Renamed to symbol1.scm.
	* Makefile.am: Update.
	* symbol1.scm: Added test for Savannah bug #39229
	"Empty string symbol lexer problem".
